Update deployment files

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             </nav>
             <div class="about_container">
                 <h2 class="headline_about">"Hello! Biotech enthusiasts"</h2>
-                <h1 class="about_title">WORLD BIOTECH<br>CONFERENCE 2023</h1>
+                <title class="about_title">WORLD BIOTECH CONFERENCE 2023</title>
                 <hr class="about_line one">
                 <p class="about_text one">A casual scientific meeting to discuss the future of the biotechnology field with ponents from more than 27 countries is taking place in October, In New York. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quaerat. Ipsa, dolorum dolor? Laudantium molestias qui corrupti nostrum in aut quam culpa nesciunt fugiat amet, quo rerum ipsa maxime. Veritatis.</p>
                 <p class="about_text two">A casual scientific meeting to discuss the future of the biotechnology field with ponents from more than 27 countries is taking place in October, In New York.</p>
