--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <nav class="nav_var_mobile">
                 <img class="burger_icon" src="./assets/icons/burger_icon.png" alt="burger menu" href=""></img>
                 <img class="close_icon inactive" src="./assets/icons/x_icon.svg"></img>
+                <img class="mobile_icon inactive" src="./assets/icons/page_logo.png" alt="close icon"></img>
                 <ul class="nav_var_list_m inactive">
                     <li class="nav_list_li_m"><a class="nav_list_link_m nav_li" href="about.html">About</a></li>
                     <hr class="speaker_line">
