Update deployment files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="./assets/icons/page_logo.png"  type="image/icon type">
-    <link rel="stylesheet" media="screen and (max-device-width: 768px)" href="./styles_m.css">
-    <link rel="stylesheet" media="screen and (min-device-width: 769px)" href="./styles_d.css">
+    <!-- <link rel="stylesheet" media="screen and (max-device-width: 768px)" href="./styles_m.css">
+    <link rel="stylesheet" media="screen and (min-device-width: 769px)" href="./styles_d.css"> -->
+    <link rel="stylesheet" href="./styles_d.css">
     <title>Biotech Summit</title>
   </head>
   <body>
